--- a/app/src/main/res/layout/card_info_villain_henchmen_controls.xml
+++ b/app/src/main/res/layout/card_info_villain_henchmen_controls.xml
@@ -5,8 +5,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="1"
-        android:gravity="bottom"
-        android:layout_marginTop="16dp">
+        android:gravity="bottom">
 
     <TextView
             android:text="@string/mastermindLeaderLabel"
