Switching game set info's recycler views to a basic view

--- a/app/src/main/res/layout/card_info_game_set_controls.xml
+++ b/app/src/main/res/layout/card_info_game_set_controls.xml
@@ -12,24 +12,10 @@
             android:orientation="vertical">
 
         <!-- Masterminds -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <TextView
-                    android:text="@string/masterminds"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBaseline_toBaselineOf="@+id/gameSetInfoMastermindsEnabledSwitch" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/gameSetInfoMastermindsEnabledSwitch"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+                android:text="@string/masterminds"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
@@ -39,24 +25,10 @@
                 android:layout_marginBottom="16dp" />
 
         <!-- Schemes -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <TextView
-                    android:text="@string/schemes"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBaseline_toBaselineOf="@+id/gameSetInfoSchemesEnabledSwitch" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/gameSetInfoSchemesEnabledSwitch"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+                android:text="@string/schemes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
@@ -66,24 +38,10 @@
                 android:layout_marginBottom="16dp" />
 
         <!-- Villains -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <TextView
-                    android:text="@string/villains"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBaseline_toBaselineOf="@+id/gameSetInfoVillainsEnabledSwitch" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/gameSetInfoVillainsEnabledSwitch"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+                android:text="@string/villains"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
@@ -93,24 +51,10 @@
                 android:layout_marginBottom="16dp" />
 
         <!-- Henchmen -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <TextView
-                    android:text="@string/henchmen"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBaseline_toBaselineOf="@+id/gameSetInfoHenchmenEnabledSwitch" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/gameSetInfoHenchmenEnabledSwitch"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+                android:text="@string/henchmen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
@@ -120,24 +64,10 @@
                 android:layout_marginBottom="16dp" />
 
         <!-- Heroes -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <TextView
-                    android:text="@string/heroes"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBaseline_toBaselineOf="@+id/gameSetInfoHeroesEnabledSwitch" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/gameSetInfoHeroesEnabledSwitch"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+                android:text="@string/heroes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
